--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
-spring.datasource.url=jdbc:h2:mem:clientesdb
-spring.datasource.username=juan
-spring.datasource.password=sa
-spring.datasource.driver-class-name=org.h2.Driver
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:mysql://localhost/db_springboot?serverTimezone=America/Mexico_city&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/db_springboot
+spring.datasource.username=root
+spring.datasource.password=sasa
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#Configuracion para pruebas
+spring.jpa.hibernate.ddl-auto=create-drop
+
+logging.level.org.hibernate.SQL=debug
+
