--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 logging.level.org.hibernate.SQL=debug
 
+#Configuracion de subida de archivos
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
